www/styles/pinhole-date-tag-browser.css
.pinhole-date-tag-browser {
	color: #888a85;
}

.pinhole-date-tag-browser .years,
.pinhole-date-tag-browser .months,
.pinhole-date-tag-browser .days {
	padding: 0.3em 20px 0 20px;
	background: url(../images/date-browser-background.png) bottom repeat-x;
}

.pinhole-date-tag-browser .years {
	background-color: #434745;
	border-bottom: 1px solid #4f4f4c;
}

.pinhole-date-tag-browser .months {
	background-color: #3b4040;
	border-bottom: 1px solid #454846;
}
.pinhole-date-tag-browser .days {
	background-color: #353b3b;
	border-bottom: 1px solid #3b403f;
}

.pinhole-date-tag-browser .years a,
.pinhole-date-tag-browser .years span {
	padding: 0.2em 0.4em;
}

.pinhole-date-tag-browser a.selected,
.pinhole-date-tag-browser span.selected {
	padding: 0.2em 0.5em;
}

.pinhole-date-tag-browser a,
.pinhole-date-tag-browser span {
	float: left;
	display: block;
	border-bottom: 0;
	padding: 0.2em 0.2em;
	text-decoration: none;
	border: 1px solid transparent;
	/* IE6 Hack
	   set an unused color to be index color
	   then remove this indexed color */
	_border-color: tomato;
	_filter:chroma(color=tomato);
}

.pinhole-date-tag-browser a:hover,
.pinhole-date-tag-browser .selected {
	border-width: 1px;
	border-style: solid;
	border-bottom: 0;
	background: #2E3436;
	-moz-border-radius-topright: 4px;
	-moz-border-radius-topleft: 4px;
}

.pinhole-date-tag-browser a:hover {
	text-decoration: underline;
}

.pinhole-date-tag-browser .selected {
	font-weight: bold;
	position: relative;
	top: 1px;
}

.pinhole-date-tag-browser .years .selected,
.pinhole-date-tag-browser .years a:hover {
	background-color: #3b4040;
	border-color: #4f4f4c;
}

.pinhole-date-tag-browser .months .selected,
.pinhole-date-tag-browser .months a:hover {
	background-color: #353b3b;
	border-color: #454846;
}

.pinhole-date-tag-browser .days .selected,
.pinhole-date-tag-browser .days a:hover {
	background-color: #2E3436;
	border-color: #3b403f;
}

